change files directories

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <nav class="nav header-nav">
                     <a href="" class="nav-link">About</a>
                     <a href="./pages/map/index.html" class="nav-link">Map</a>
-                    <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
+                    <a href="./pages/zoos/pandas.html" class="nav-link">Zoos</a>
                     <button class="nav-link" id="contact-open__header">Contact us</button>
                     <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
                 </nav>
@@ -42,7 +42,7 @@
         <section class="menu">
             <a href="" class="menu-link">About</a>
             <a href="./pages/map/index.html" class="menu-link">Map</a>
-            <a href="./pages/zoos-pandas/index.html" class="menu-link">Zoos</a>
+            <a href="./pages/zoos/pandas.html" class="menu-link">Zoos</a>
             <button class="menu-link" id="contact-open__menu">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="menu-link">Design</a>
             <button class="menu-link" id="login-open-2">my account</button>
@@ -55,7 +55,7 @@
             </div>
                 <div class="hero-image">
                     <img class="hero-image__img" src="./assets/images/Panda.png" alt="Panda">
-                    <a class="hero-image__link" href="./pages/zoos-pandas/index.html">
+                    <a class="hero-image__link" href="./pages/zoos/pandas.html">
                         <img src="./assets/icons/Frame.svg" alt="watch">
                     </a>
                 </div>
@@ -90,7 +90,7 @@
             <div class="pets-container">
                 <div class="pets-container__card">
                     <div class="pets-container__card-top">
-                        <a class="pets-container__card-link" href="./pages/zoos-pandas/index.html" id="zoos-pandas"><img src="./assets/images/Pandas.png" alt="pandas"></a>
+                        <a class="pets-container__card-link" href="./pages/zoos/pandas.html" id="zoos-pandas"><img src="./assets/images/Pandas.png" alt="pandas"></a>
                     </div>
                     <div class="pets-container__card-bottom">
                         <h2 class="pets-container__card-title">Pandas</h2>
@@ -204,13 +204,13 @@
         </section>
         <section class="animals">
             <h2 class="animals-title">Look at these beautiful animals</h2>
-            <a href="./pages/zoos-pandas/index.html" class="animals-links"><img src="./assets/images/Pandas.png" class="animals-img" alt=""></a>
+            <a href="./pages/zoos/pandas.html" class="animals-links"><img src="./assets/images/Pandas.png" class="animals-img" alt=""></a>
             <a href="./pages/zoos-gorillas/index.html" class="animals-links"><img src="./assets/images/gorrilas.png" class="animals-img" alt=""></a>
             <a href="./pages/zoos-eagles/index.html" class="animals-links"><img src="./assets/images/eagles.png" class="animals-img" alt=""></a>
             <a href="./pages/zoos-alligators/index.html" id="zoos-alligators" class="animals-links"><img src="./assets/images/aligators.png" class="animals-img" alt=""></a>
             <a href="" class="animals-links"><img src="./assets/images/elephants.png" class="animals-img" alt=""></a>
             <a href="" class="animals-links"><img src="./assets/images/lemurs.png" class="animals-img" alt=""></a>
-            <a href="./pages/zoos-pandas/index.html" class="animals-links"><img src="./assets/images/Pandas.png" class="animals-img" alt=""></a>
+            <a href="./pages/zoos/pandas.html" class="animals-links"><img src="./assets/images/Pandas.png" class="animals-img" alt=""></a>
         </section>
     </main>
     <section class="footer-wrapper">
@@ -225,7 +225,7 @@
             <nav class="nav footer-nav">
                 <a href="" class="nav-link">About</a>
                 <a href="./pages/map/index.html" class="nav-link">Map</a>
-                <a href="./pages/zoos-pandas/index.html" class="nav-link">Zoos</a>
+                <a href="./pages/zoos/pandas.html" class="nav-link">Zoos</a>
                 <button class="nav-link" id="contact-open__footer">Contact us</button>
                 <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
             </nav>
