--- a/pages/zoos/eagles.html
+++ b/pages/zoos/eagles.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoos</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./media/media.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/media/media.css">
     <link rel="stylesheet" href="../../assets/others/others.css">
     <link rel="stylesheet" href="../../assets/others/media/media.css">
 </head>
@@ -16,7 +16,7 @@
     <section class="header-hero">
         <section class="header-wrapper">     
             <header class="header">
-                <a class="logo" href="">
+                <a class="logo" href="../../index.html">
                     <p class="logo-title">online</p>
                     <div class="logo-container">
                         <p class="logo-title">Z</p>
@@ -40,9 +40,9 @@
             </header>
         </section>
         <section class="menu">
-            <a href="" class="menu-link">About</a>
-            <a href="./pages/map/index.html" class="menu-link">Map</a>
-            <a href="./pages/zoos-pandas/index.html" class="menu-link">Zoos</a>
+            <a href="../../index.html" class="menu-link">About</a>
+            <a href="../map/index.html" class="menu-link">Map</a>
+            <a href="" class="menu-link">Zoos</a>
             <button class="menu-link" id="contact-open__menu">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="menu-link">Design</a>
             <button class="menu-link" id="login-open-2">my account</button>
@@ -50,46 +50,46 @@
     <section class="main-section">
         <aside class="aside">
             <div class="aside-container">
-                <a href="../zoos-pandas/index.html" class="aside-link">
+                <a href="pandas.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/Pandas.png" alt="">
                 </a>
                 <h3 class="aside-name">Pandas</h3>
             </div>
             <div class="aside-container">
-                <a href="../zoos-eagles/index.html" class="aside-link">
+                <a href="eagles.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/eagles.png" alt="">
+                    <img class="aside-link__bg" src="../../assets/images/Vector.png" alt="">
                 </a>
                 <h3 class="aside-name">eagles</h3>
             </div>
             <div class="aside-container">
-                <a href="../zoos-gorillas/index.html" class="aside-link">
+                <a href="gorillas.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/gorrilas.png" alt="">
                 </a>
                 <h3 class="aside-name">gorillas</h3>
             </div>
             <div class="aside-container">
-                <a href="../zoos-alligators/index.html" class="aside-link">
-                    <img class="aside-link__bg" src="../../assets/images/Vector.png" alt="">
+                <a href="alligators.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/aligators.png" alt="">
                 </a>
                 <h3 class="aside-name">aligators</h3>
             </div>
         </aside>
         <section class="maincam">
-            <h2 class="maincam-title">Alligators</h2>
+            <h2 class="maincam-title">Eagles</h2>
             <div class="maincam-card">
                 <button class="maincam-card__btn"></button>
                 <button class="maincam-card__btn"></button>
             </div>
             <h3 class="maincam-subtitle">Main cameras</h3>
-            <iframe class="maincam-iframe" width="100%" height="604px" src="https://www.youtube.com/embed/R34lYREpOXk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="maincam-iframe" width="100%" height="604px" src="https://www.youtube.com/embed/dUE_AMCliSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section class="sidecam">
             <h3 class="sidecam-subtitle">Side cameras</h3>
             <div class="sidecam-container">
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/tv8MVrZry4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/tv8MVrZry4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/tv8MVrZry4c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/gsO7lmS8XG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/gsO7lmS8XG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/gsO7lmS8XG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="sidecam-container__listener">
                     <button class="sidecam-container__listener-btn"></button>
                     <button class="sidecam-container__listener-btn"></button>
@@ -101,49 +101,50 @@
                 <h2 class="information-title">information</h2>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Zoo</h2>
-                    <p class="info-card__text">St. Augustine's Alligator Farm Zoological Park</p>
+                    <p class="info-card__text">Catalina island</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Type of aviary</h2>
-                    <p class="info-card__text">Imitation of the natural environment</p>
+                    <p class="info-card__text">The coast of Southern California in the Gulf of Santa Catalina</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Habitat</h2>
-                    <p class="info-card__text">Southeastern United States and northeastern Mexico</p>
+                    <p class="info-card__text">Mountains of southwest China</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Type of food</h2>
-                    <p class="info-card__text">Fish, amphibians, reptiles, birds, and mammals</p>
+                    <p class="info-card__text">Fish</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Population in the world</h2>
-                    <p class="info-card__text">600</p>
+                    <p class="info-card__text">In 2020, seven pairs of Bald Eagles nested on Catalina Island and four chicks fledged.</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">About species</h2>
-                    <p class="info-card__text">The yards at Shenshuping Gengda Panda Center in China's Wolong Valley are filled with bamboo--making for some very happy panda residents.</p>
+                    <p class="info-card__text">The bald eagle (Haliaeetus leucocephalus) is a bird of prey found in North America.</p>
                 </div>
             </div>
             <div class="facts">
                 <h2 class="information-title">Interesting facts</h2>
                 <ul class="facts-container">
                     <li class="facts-card">
-                        <p class="facts-text">It is one of two extant species in the genus Alligator within the family Alligatoridae; it is larger than the only other living alligator species, the Chinese alligator.</p>
+                        <p class="facts-text">Distinguishing feature of the immature bald eagle over the mature bird is its black, yellow-tipped beak; the mature eagle has a fully yellow beak.
                     </li>
                     <li class="facts-card">
-                        <p class="facts-text">Adult male American alligators measure 3.4 to 4.6 m in length, and can weigh up to 453 kg . Females are smaller, measuring 2.6 to 3 m in length.</p>
+                        <p class="facts-text">The bald eagle has sometimes been considered the largest true raptor (accipitrid) in North America.</p>
                     </li>
                     <li class="facts-card">
-                        <p class="facts-text">Young are born with yellow bands around their bodies and are protected by their mother for up to one year.</p>
+                        <p class="facts-text">TThe bald eagle has a body length of 70–102 cm. Typical wingspan is between 1.8 and 2.3 m and mass is normally between 3 and 6.3 kg.</p>
                     </li>
                     <li class="facts-card">
-                        <p class="facts-text">American alligator was listed as an endangered species by the Endangered Species Act of 1973.</p>
+                        <p class="facts-text">Female pandas give birth to one or two cubs every two years. Cubs stay with their mothers for 18 months before venturing off on their own.</p>
                     </li>
                     <li class="facts-card">
-                        <p class="facts-text">The teeth number 74–80.</p>
+                        <p class="facts-text">BTo hunt fish, the eagle swoops down over the water and snatches the fish out of the water with its talons.</p>
                     </li>
                     <li class="facts-card">
-                        <p class="facts-text">The American alligator was first classified by French zoologist François Marie Daudin as Crocodilus mississipiensis in 1801.</p>
+                        <p class="facts-text">The bald eagle is a powerful flier, and soars on thermal convection currents. It reaches speeds of 56–70 km/h (35–43 mph) when gliding and flapping.</p>
+                        </p>
                     </li>
                 </ul>
             </div>
@@ -154,14 +155,14 @@
     </section>
     <section class="footer-wrapper">
         <footer class="footer">
-            <a class="logo" href="../../index.html">
+            <a class="logo footer-logo" href="../../index.html">
                 <p class="logo-title">online</p>
                 <div class="logo-container">
                     <p class="logo-title">Z</p>
                     <img src="../../assets/icons/logo.svg" class="logo-icon">
                 </div>
             </a>
-            <nav class="nav">
+            <nav class="nav footer-nav">
                 <a href="../../index.html" class="nav-link">About</a>
                 <a href="../map/index.html" class="nav-link">Map</a>
                 <a href="" class="nav-link">Zoos</a>
