--- a/pages/zoos/gorillas.html
+++ b/pages/zoos/gorillas.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoos</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./media/media.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/media/media.css">
     <link rel="stylesheet" href="../../assets/others/others.css">
     <link rel="stylesheet" href="../../assets/others/media/media.css">
 </head>
@@ -16,7 +16,7 @@
     <section class="header-hero">
         <section class="header-wrapper">     
             <header class="header">
-                <a class="logo" href="">
+                <a class="logo" href="../../index.html">
                     <p class="logo-title">online</p>
                     <div class="logo-container">
                         <p class="logo-title">Z</p>
@@ -24,9 +24,9 @@
                     </div>
                 </a>
                 <nav class="nav header-nav">
-                    <a href="../../index.html" class="nav-link">About</a>
-                    <a href="../map/index.html" class="nav-link">Map</a>
-                    <a href="" class="nav-link">Zoos</a>
+                    <a href="../../index.html" class="menu-link">About</a>
+                    <a href="../map/index.html" class="menu-link">Map</a>
+                    <a href="" class="menu-link">Zoos</a>
                     <button class="nav-link" id="contact-open__header">Contact us</button>
                     <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
                 </nav>
@@ -40,56 +40,55 @@
             </header>
         </section>
         <section class="menu">
-            <a href="" class="menu-link">About</a>
-            <a href="./pages/map/index.html" class="menu-link">Map</a>
-            <a href="./pages/zoos-pandas/index.html" class="menu-link">Zoos</a>
-            <button class="menu-link" id="contact-open__menu">Contact us</button>
+            <a href="../../index.html" class="menu-link">About</a>
+            <a href="../map/index.html" class="menu-link">Map</a>
+            <a href="" class="menu-link">Zoos</a>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="menu-link">Design</a>
             <button class="menu-link" id="login-open-2">my account</button>
         </section>
     <section class="main-section">
         <aside class="aside">
             <div class="aside-container">
-                <a href="../zoos-pandas/index.html" class="aside-link">
+                <a href="pandas.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/Pandas.png" alt="">
                 </a>
                 <h3 class="aside-name">Pandas</h3>
             </div>
             <div class="aside-container">
-                <a href="../zoos-eagles/index.html" class="aside-link">
+                <a href="eagles.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/eagles.png" alt="">
-                    <img class="aside-link__bg" src="../../assets/images/Vector.png" alt="">
                 </a>
                 <h3 class="aside-name">eagles</h3>
             </div>
             <div class="aside-container">
-                <a href="../zoos-gorillas/index.html" class="aside-link">
+                <a href="gorillas.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/gorrilas.png" alt="">
+                    <img class="aside-link__bg" src="../../assets/images/Vector.png" alt="">
                 </a>
                 <h3 class="aside-name">gorillas</h3>
             </div>
             <div class="aside-container">
-                <a href="../zoos-alligators/index.html" class="aside-link">
+                <a href="alligators.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/aligators.png" alt="">
                 </a>
                 <h3 class="aside-name">aligators</h3>
             </div>
         </aside>
         <section class="maincam">
-            <h2 class="maincam-title">Eagles</h2>
+            <h2 class="maincam-title">gorillas</h2>
             <div class="maincam-card">
                 <button class="maincam-card__btn"></button>
                 <button class="maincam-card__btn"></button>
             </div>
             <h3 class="maincam-subtitle">Main cameras</h3>
-            <iframe class="maincam-iframe" width="100%" height="604px" src="https://www.youtube.com/embed/dUE_AMCliSU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="maincam-iframe" width="100%" height="604px" src="https://www.youtube.com/embed/7fQmjbx9zoY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section class="sidecam">
             <h3 class="sidecam-subtitle">Side cameras</h3>
             <div class="sidecam-container">
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/gsO7lmS8XG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/gsO7lmS8XG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/gsO7lmS8XG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/tz0avWZoqjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/tz0avWZoqjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="sidecam-container__iframe" width="380" height="210" src="https://www.youtube.com/embed/tz0avWZoqjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="sidecam-container__listener">
                     <button class="sidecam-container__listener-btn"></button>
                     <button class="sidecam-container__listener-btn"></button>
@@ -101,50 +100,49 @@
                 <h2 class="information-title">information</h2>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Zoo</h2>
-                    <p class="info-card__text">Catalina island</p>
+                    <p class="info-card__text">GRACE gorillasd</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Type of aviary</h2>
-                    <p class="info-card__text">The coast of Southern California in the Gulf of Santa Catalina</p>
+                    <p class="info-card__text">Imitation of the natural environment</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Habitat</h2>
-                    <p class="info-card__text">Mountains of southwest China</p>
+                    <p class="info-card__text">Eastern Democratic Republic of the Congo, southwestern Uganda and Rwanda</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Type of food</h2>
-                    <p class="info-card__text">Fish</p>
+                    <p class="info-card__text">Bamboo shoots and fruits, termites and ants.</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">Population in the world</h2>
-                    <p class="info-card__text">In 2020, seven pairs of Bald Eagles nested on Catalina Island and four chicks fledged.</p>
+                    <p class="info-card__text">600</p>
                 </div>
                 <div class="info-card">
                     <h2 class="info-card__subtitle">About species</h2>
-                    <p class="info-card__text">The bald eagle (Haliaeetus leucocephalus) is a bird of prey found in North America.</p>
+                    <p class="info-card__text">The eastern gorilla has become increasingly endangered since the 1990s, and the species was listed as critically endangered in September 2016 as its population continued to decrease.</p>
                 </div>
             </div>
             <div class="facts">
                 <h2 class="information-title">Interesting facts</h2>
                 <ul class="facts-container">
                     <li class="facts-card">
-                        <p class="facts-text">Distinguishing feature of the immature bald eagle over the mature bird is its black, yellow-tipped beak; the mature eagle has a fully yellow beak.
+                        <p class="facts-text">The eastern gorilla is a critically endangered species of the genus Gorilla and the largest living primate.</p>
                     </li>
                     <li class="facts-card">
-                        <p class="facts-text">The bald eagle has sometimes been considered the largest true raptor (accipitrid) in North America.</p>
+                        <p class="facts-text">Gorillas tend to have larger group sizes than their western relatives, numbering up to 35 individuals.</p>
                     </li>
                     <li class="facts-card">
-                        <p class="facts-text">TThe bald eagle has a body length of 70–102 cm. Typical wingspan is between 1.8 and 2.3 m and mass is normally between 3 and 6.3 kg.</p>
+                        <p class="facts-text">The gorillas can choose where to sleep and they often choose to bed down inside their night building, but they sometimes sleep outside too.</p>
                     </li>
                     <li class="facts-card">
                         <p class="facts-text">Female pandas give birth to one or two cubs every two years. Cubs stay with their mothers for 18 months before venturing off on their own.</p>
                     </li>
                     <li class="facts-card">
-                        <p class="facts-text">BTo hunt fish, the eagle swoops down over the water and snatches the fish out of the water with its talons.</p>
+                        <p class="facts-text">Because they eat so much fibrous vegetation, gorillas spend a lot of time resting and digesting.</p>
                     </li>
                     <li class="facts-card">
-                        <p class="facts-text">The bald eagle is a powerful flier, and soars on thermal convection currents. It reaches speeds of 56–70 km/h (35–43 mph) when gliding and flapping.</p>
-                        </p>
+                        <p class="facts-text">Primary threats to the eastern gorilla include habitat destruction for residential, commercial, and agricultural purposes, habitat fragmentation caused by transportation corridors and resource extraction, as well as disease.</p>
                     </li>
                 </ul>
             </div>
@@ -155,14 +153,14 @@
     </section>
     <section class="footer-wrapper">
         <footer class="footer">
-            <a class="logo" href="../../index.html">
+            <a class="logo footer-logo" href="../../index.html">
                 <p class="logo-title">online</p>
                 <div class="logo-container">
                     <p class="logo-title">Z</p>
                     <img src="../../assets/icons/logo.svg" class="logo-icon">
                 </div>
             </a>
-            <nav class="nav">
+            <nav class="nav footer-nav">
                 <a href="../../index.html" class="nav-link">About</a>
                 <a href="../map/index.html" class="nav-link">Map</a>
                 <a href="" class="nav-link">Zoos</a>
