--- a/pages/zoos/pandas.html
+++ b/pages/zoos/pandas.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoos</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./media/media.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/media/media.css">
     <link rel="stylesheet" href="../../assets/others/others.css">
     <link rel="stylesheet" href="../../assets/others/media/media.css">
 </head>
@@ -15,7 +15,7 @@
 <body>
         <section class="header-wrapper">     
             <header class="header">
-                <a class="logo" href="">
+                <a class="logo" href="../../index.html">
                     <p class="logo-title">online</p>
                     <div class="logo-container">
                         <p class="logo-title">Z</p>
@@ -23,9 +23,9 @@
                     </div>
                 </a>
                 <nav class="nav header-nav">
-                    <a href="../../index.html" class="nav-link">About</a>
-                    <a href="../map/index.html" class="nav-link">Map</a>
-                    <a href="" class="nav-link">Zoos</a>
+                    <a href="../../index.html" class="menu-link">About</a>
+                    <a href="../map/index.html" class="menu-link">Map</a>
+                    <a href="" class="menu-link">Zoos</a>
                     <button class="nav-link" id="contact-open__header">Contact us</button>
                     <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="nav-link">Design</a>
                 </nav>
@@ -40,8 +40,8 @@
         </section>
         <section class="menu">
             <a href="../../index.html" class="menu-link">About</a>
-            <a href="./pages/map/index.html" class="menu-link">Map</a>
-            <a href="./pages/zoos-pandas/index.html" class="menu-link">Zoos</a>
+            <a href="../map/index.html" class="menu-link">Map</a>
+            <a href="" class="menu-link">Zoos</a>
             <button class="menu-link" id="contact-open__menu">Contact us</button>
             <a href="https://www.figma.com/file/vzrwoqf0kSG1uOify8BRBR/online-zoo?node-id=0%3A1" class="menu-link">Design</a>
             <button class="menu-link" id="login-open-2">my account</button>
@@ -49,26 +49,26 @@
     <section class="main-section">
         <aside class="aside">
             <div class="aside-container">
-                <a href="../zoos-pandas/index.html" class="aside-link">
+                <a href="pandas.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/Pandas.png" alt="">
                     <img class="aside-link__bg" src="../../assets/images/Vector.png" alt="">
                 </a>
                 <h3 class="aside-name">Pandas</h3>
             </div>
             <div class="aside-container">
-                <a href="../zoos-eagles/index.html" class="aside-link">
+                <a href="eagles.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/eagles.png" alt="">
                 </a>
                 <h3 class="aside-name">eagles</h3>
             </div>
             <div class="aside-container">
-                <a href="../zoos-gorillas/index.html" class="aside-link">
+                <a href="gorillas.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/gorrilas.png" alt="">
                 </a>
                 <h3 class="aside-name">gorillas</h3>
             </div>
             <div class="aside-container">
-                <a href="../zoos-alligators/index.html" class="aside-link">
+                <a href="alligators.html" class="aside-link">
                     <img class="aside-link__img" src="../../assets/images/aligators.png" alt="">
                 </a>
                 <h3 class="aside-name">aligators</h3>
@@ -154,14 +154,14 @@
     </section>
     <section class="footer-wrapper">
         <footer class="footer">
-            <a class="logo" href="../../index.html">
+            <a class="logo footer-logo" href="../../index.html">
                 <p class="logo-title">online</p>
                 <div class="logo-container">
                     <p class="logo-title">Z</p>
                     <img src="../../assets/icons/logo.svg" class="logo-icon">
                 </div>
             </a>
-            <nav class="nav">
+            <nav class="nav footer-nav">
                 <a href="../../index.html" class="nav-link">About</a>
                 <a href="../map/index.html" class="nav-link">Map</a>
                 <a href="" class="nav-link">Zoos</a>
